--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "docpad-plugin-stylus": "2.x",
     "docpad-plugin-text": "2.x",
     "docpad-plugin-handlebars": "~2.2.2",
-    "docpad-plugin-sass": "~2.6.1"
+    "docpad-plugin-sass": "~2.6.1",
+    "docpad-plugin-ghpages": "~2.4.0"
   },
   "devDependencies": {
     "docpad-plugin-livereload": "2.x"
